2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_empty): use
	the desktop default cursor for the empty display.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell.c (gimp_display_shell_empty): the
	code to reset the cursor got lost when introducing this function.

	* app/display/gimpdisplayshell-dnd.c
	(gimp_display_shell_dnd_init): remove redundant casts.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpcanvas.c (gimp_canvas_draw_drop_zone): make the
	scale factor of the label 4/5 instead of 2/3 of the canvas and
	move the factor out of the MIN().

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplay-foreach.[ch] (gimp_displays_delete): add
	boolean "quit" parameter and leave the empty display open when it
	is FALSE.

	* app/dialogs/quit-dialog.c
	* app/actions/file-commands.c: pass quit = FALSE for "close all".

	* app/gui/gui.c: pass quit = TRUE when quitting.

	* app/actions/file-actions.c: fix sensitivity of "Close all".

	* app/actions/view-actions.c: fix sensitivity of "Close".

2008-03-19  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: clean up after Martin.

2008-03-19  Michael Natterer  <mitch@gimp.org>

	* app/actions/view-commands.c: remove useless include.

2008-03-19  Martin Nordholts  <martinn@svn.gnome.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_expose): Refactor to emphasize logic.
	(gimp_display_shell_canvas_expose_image)
	(gimp_display_shell_canvas_expose_drop_zone): New helper
	functions.

2008-03-19  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_canvas_expose): return FALSE so that the
	default drag highlighting works.

	* app/display/gimpdisplayshell-dnd.c: only set the canvas as drop
	target, not the whole shell.

	* app/display/gimpdisplayshell.c: delay the call to